# burrow

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  build-deb.sh  generate_icon.sh  package-lock.json  package.json
.beads/: daemon-error  issues.jsonl
.github/workflows/: ci.yml
.opencode/plans/: moq-integration.md  multi-device-support.md  unread-badges-and-previews.md
app/: DESIGN.md  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/centauri/burrow_app/: MainActivity.kt
app/integration_test/: simple_test.dart
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/models/: meeting_notes.dart  transcript.dart
app/lib/providers/: archive_provider.dart  auth_provider.dart  call_provider.dart  contacts_provider.dart  group_avatar_provider.dart  group_provider.dart  groups_provider.dart  invite_provider.dart  meeting_notes_provider.dart  messages_provider.dart  mute_provider.dart  profile_provider.dart  relay_provider.dart  transcription_provider.dart
app/lib/screens/: archived_groups_screen.dart  chat_list_screen.dart  chat_shell_screen.dart  chat_view_screen.dart  create_group_screen.dart  create_identity_screen.dart  group_info_screen.dart  home_screen.dart  import_identity_screen.dart  in_call_screen.dart  incoming_call_screen.dart  invite_members_screen.dart  meeting_summary_screen.dart  new_dm_screen.dart  onboarding_screen.dart  outgoing_call_screen.dart  pending_invites_screen.dart  profile_screen.dart  transcript_history_screen.dart  transcript_screen.dart
app/lib/services/: call_manager.dart  frame_encryption_service.dart  group_avatar_service.dart  link_preview_service.dart  media_attachment_service.dart  nostr_signaling_service.dart  transcription_service.dart  turn_settings.dart  user_service.dart  webrtc_service.dart
app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/src/rust/api/: account.dart  app_state.dart  call_quality.dart  call_session.dart  call_signaling.dart  call_webrtc.dart  contacts.dart  error.dart  group.dart  identity.dart  invite.dart  keypackage.dart  media.dart  meeting_intelligence.dart  meeting_intelligence.freezed.dart  message.dart  relay.dart  simple.dart  state.dart  transcription.dart
app/lib/utils/: dm_utils.dart
app/lib/widgets/: action_item_tile.dart  chat_bubble.dart  chat_list_tile.dart  contacts_list.dart  link_preview_card.dart  tab_aware_fab.dart  transcript_bubble.dart  typing_indicator.dart
app/linux/: CMakeLists.txt  burrow.desktop  com.centauri.burrow_app.desktop
app/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/linux/runner/: my_application.cc
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/rust/: Cargo.toml  rust-toolchain.toml
app/rust/.cargo/: config.toml
app/rust/src/: frb_generated.rs
app/rust/src/api/: account.rs  app_state.rs  call_quality.rs  call_session.rs  call_signaling.rs  call_webrtc.rs  contacts.rs  error.rs  group.rs  identity.rs  invite.rs  keypackage.rs  link_preview.rs  media.rs  meeting_intelligence.rs  message.rs  mod.rs  relay.rs  simple.rs  state.rs  transcription.rs
app/rust/tests/: account_tests.rs  call_tests.rs  error_tests.rs  media_tests.rs  meeting_intelligence_tests.rs  state_tests.rs  transcription_tests.rs
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle  settings.gradle
app/rust_builder/android/src/main/: AndroidManifest.xml
app/rust_builder/cargokit/build_tool/lib/src/: builder.dart
app/rust_builder/ios/: rust_lib_burrow_app.podspec
app/rust_builder/linux/: CMakeLists.txt
app/rust_builder/macos/: rust_lib_burrow_app.podspec
app/rust_builder/windows/: CMakeLists.txt
app/test/: widget_test.dart
app/test/models/: call_state_test.dart  meeting_notes_test.dart  transcript_test.dart
app/test/providers/: call_provider_test.dart  groups_provider_test.dart  meeting_notes_provider_test.dart  messages_provider_test.dart  transcription_provider_test.dart
app/test/screens/: call_screens_test.dart  onboarding_screen_test.dart
app/test/services/: link_preview_service_test.dart
app/test/widgets/: chat_bubble_test.dart  chat_list_tile_test.dart  typing_indicator_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/windows/runner/: Runner.rc  main.cpp
bridge/: Cargo.toml
bridge/src/: main.rs
cli/: Cargo.toml
cli/src/: config.rs  keyring.rs  main.rs  media.rs  webrtc.rs
cli/src/acl/: access_control.rs  audit.rs  mod.rs
cli/src/commands/: acl.rs  call.rs  daemon.rs  group.rs  init.rs  invite.rs  listen.rs  mod.rs  read.rs  read_receipt.rs  send.rs  welcome.rs
cli/src/relay/: pool.rs
cli/src/storage/: file_store.rs
docs/: BUILD.md  CONTRIBUTING.md  PHASE2-DESIGN.md  PHASE3-DESIGN.md  PHASE3-RESEARCH.md  PHASE4-DESIGN.md  mip-read-receipts.md  mip-typing-indicators.md
mls-engine/: Cargo.toml
mls-engine/src/: group.rs  keygen.rs  main.rs  message.rs  storage.rs
reviews/: agent-team-review.md  security-audit.md  test-report.md
scripts/: check-messages.sh
src/: index.ts
src/cli/: acl.ts  daemon.ts  group.ts  index.ts  init.ts  invite.ts  read.ts  send.ts
src/crypto/: identity.ts  index.ts  nip44.ts  utils.ts
src/mls/: extensions.ts  group.ts  index.ts  keypackage.ts
src/mls-engine/: bridge.ts  index.ts
src/nostr/: events.ts  index.ts  relay.ts
src/security/: access-control.ts  audit.ts  index.ts
src/store/: index.ts
src/types/: index.ts
tasks/: cli-calls.md  feature-parity.md  mdk-upgrade.md  pika-parity.md
test/: crypto.test.ts  extensions.test.ts  integration.test.ts  mls.test.ts  nostr-events.test.ts  security.test.ts  store.test.ts
(+1 files in other folders)
