[package]
name = "burrow-bridge"
version = "0.1.0"
edition = "2021"
description = "Bridge between Burrow MLS messaging and OpenClaw chat completions API"

[[bin]]
name = "burrow-bridge"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
dirs = "6"
notify = "7"
