[package]
name = "burrow"
version = "0.1.0"
edition = "2021"
description = "Marmot Protocol encrypted messaging CLI"

[[bin]]
name = "burrow"
path = "src/main.rs"

[dependencies]
# Marmot protocol — same rev as Flutter app
mdk-core = { git = "https://github.com/marmot-protocol/mdk", rev = "136a9ee929580206ea0357d48d9766427918186d", features = ["mip04"] }
mdk-memory-storage = { git = "https://github.com/marmot-protocol/mdk", rev = "136a9ee929580206ea0357d48d9766427918186d" }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk", rev = "136a9ee929580206ea0357d48d9766427918186d" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk", rev = "136a9ee929580206ea0357d48d9766427918186d", features = [] }

nostr-sdk = { version = "0.44", features = ["nip04", "nip44", "nip59"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
chrono = "0.4"
anyhow = "1"
dirs = "6"
bech32 = "0.11"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# GStreamer WebRTC (optional — requires system GStreamer dev libs)
gstreamer = { version = "0.23", optional = true }
gstreamer-webrtc = { version = "0.23", optional = true }
gstreamer-sdp = { version = "0.23", optional = true }

[features]
default = []
webrtc = ["gstreamer", "gstreamer-webrtc", "gstreamer-sdp"]
