[package]
name = "burrow-mls"
version = "0.1.0"
edition = "2021"
description = "MLS engine for Burrow CLI — wire-compatible with the Flutter app via MDK"

[[bin]]
name = "burrow-mls"
path = "src/main.rs"

[dependencies]
# Marmot protocol dependencies — SAME rev as the Flutter app
mdk-core = { git = "https://github.com/marmot-protocol/mdk", rev = "5ef0c607e56cc20217ddde24b4b2f8e82f76b776", features = ["mip04"] }
mdk-memory-storage = { git = "https://github.com/marmot-protocol/mdk", rev = "5ef0c607e56cc20217ddde24b4b2f8e82f76b776" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk", rev = "5ef0c607e56cc20217ddde24b4b2f8e82f76b776" }
nostr-sdk = { version = "0.44", features = ["nip04", "nip44", "nip59"] }

openmls = { version = "0.8", default-features = false }
openmls_traits = { version = "0.5", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
strip = true
