[package]
name = "rust_lib_burrow_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
anyhow = "1.0"
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"

# Marmot protocol dependencies (pinned to known working rev from WhiteNoise)
mdk-core = { git = "https://github.com/marmot-protocol/mdk", rev = "5ef0c607e56cc20217ddde24b4b2f8e82f76b776", features = ["mip04"] }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk", rev = "5ef0c607e56cc20217ddde24b4b2f8e82f76b776" }
mdk-storage-traits = { git = "https://github.com/marmot-protocol/mdk", rev = "5ef0c607e56cc20217ddde24b4b2f8e82f76b776" }
nostr-sdk = { version = "0.44", features = ["nip04", "nip44", "nip59"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"

# Force vendored OpenSSL for SQLCipher cross-compilation (Android)
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }

# Keyring for MdkSqliteStorage encryption key management
keyring-core = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["keychain"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["protected"] }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
